# downdatube

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml  requirements.txt
.github/workflows/: test.yml
.trunk/: trunk.yaml
app/main/: main.py
app/tests/: test_download.py
core/: save_video.py  select_streams.py
corefunctions/: download.py  get_stream.py  helpers.py
downdatube/: __main__.py  main.py  test_cli.py
downdatube/core/: save_video.py  select_streams.py
tests/: test_save_video.py  test_select_streams.py
