[tool.poetry]
name = "downdatube"
version = "2.0.0"
description = "Yet another YouTube™ downloader."
authors = ["Shehab Ali Tweel <shehabtweel@gmail.com>"]
license = "GPL-3.0-or-later"

[tool.poetry.dependencies]
python = "^3.10"
pytube = "^12.1.0"
halo = "^0.0.31"
tqdm = "^4.64.0"
typer = "^0.9.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
