[tool.poetry]
name = "downdatube"
version = "2.0.0"
description = "Yet another YouTube™ downloader."
authors = ["Shehab Ali Tweel <shehabtweel@gmail.com>"]
license = "GPL-3.0-or-later"

[tool.poetry.dependencies]
python = "^3.10"
typer = "^0.12.3"
rich = "^13.7.1"
pytube = "^15.0.0"
requests = "^2.31.0"
python-ffmpeg = "^2.0.12"
questionary = "^2.0.1"

[tool.poetry.scripts]
downdatube = "downdatube.main:app"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
coverage = "^7.3.2"

[tool.coverage.run]
source = ["downdatube"]
omit = ["test_*.py"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
